--- a/src/HoalBundle/Resources/config/routing.yml
+++ b/src/HoalBundle/Resources/config/routing.yml
@@ -7,5 +7,9 @@ login_check:
 
 loged_area:
     path: /admin/logged
-    defaults: { _controller: HoalBundle:Teste:index }
+    defaults: { _controller: HoalBundle:Home:index }
+
+home_area:
+    path: /home
+    defaults: { _controller: HoalBundle:Home:index }
     
